# MagicPad3

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: linux-install.md  troubleshooting.md  whats-new.md  windows-install.md
docs/screenshots/: CAPTURE.md
packaging/linux/: 99-magic-trackpad.rules  magicpad-companion.service  magicpad-gestures.service
packaging/linux/input-remapper-profiles/: MagicPad.json
packaging/windows/: driver-notes.md
scripts/: download-windows-driver.sh  install-endeavouros.sh  install-linux.sh  run.sh  windows-home-setup.ps1
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: device_group.rs  error.rs  gesture_daemon.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: device.rs  driver.rs  gestures.rs  logs.rs  mod.rs  settings.rs  system.rs
src-tauri/src/platform/: mod.rs  traits.rs
src-tauri/src/platform/linux/: device.rs  gestures.rs  helpers.rs  mod.rs  settings.rs
src-tauri/src/platform/macos/: mod.rs
src-tauri/src/platform/windows/: device.rs  driver.rs  mod.rs  settings.rs
src/components/: DriverPanel.svelte  GestureMap.svelte  LogPanel.svelte  SettingsPanel.svelte  StatusCard.svelte  Troubleshooting.svelte
src/lib/: api.ts  labels.ts  types.ts
