[package]
name = "magicpad-companion"
version = "0.3.2"
description = "MagicPad Companion — Apple Magic Trackpad companion for Windows 11 and Linux"
authors = ["MagicPad Companion Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/imcmurray/MagicPad3"

[lib]
name = "magicpad_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_UI_Shell",
] }
winreg = "0.55"

[target.'cfg(target_os = "linux")'.dependencies]
# sysfs / udev discovery without hard dependency on libudev at link time;
# we primarily parse /sys and /proc for portability on Arch/EndeavourOS.
nix = { version = "0.29", features = ["user"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
